<resources>
    <string name="app_name">UTS AKB IF4 10116154</string>
    <string name="title_profil">Profil</string>
    <string name="title_kontak">Kontak</string>
    <string name="title_daftarTeman">Daftar Teman</string>
    <string name="settings">Settings</string>
    <string name="viewpager">Lihat ViewPager</string>

    <string name="nim">10116154</string>
    <string name="nama">Ferry Hermawan</string>
    <string name="kelas">IF4</string>
    <string name="deskripsi">Mahasiswa UNIKOM yang saat ini sedang menempuh kuliah semester 6</string>


    <string name="telpon">+628997161211</string>
    <string name="email">ferryhermawan24@gmail.com</string>
    <string name="instagram">ferrympe7</string>
    <string name="instagramlink">https://www.instagram.com/ferrympe7</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Start Now</string>

    <string name="viewpager_1_title">Welcome!</string>
    <string name="viewpager_1_desc">Selamat datang di aplikasi untuk melihat friend list</string>

    <string name="viewpager_2_title">Profil</string>
    <string name="viewpager_2_desc">Menampilkan profil dari pembuat aplikasi</string>

    <string name="viewpager_3_title">Kontak</string>
    <string name="viewpager_3_desc">Menampilkan kontak dari pembuat aplikasi</string>

    <string name="viewpager_4_title">Daftar Teman</string>
    <string name="viewpager_4_desc">Menampilkan list daftar teman /nMenu ini dapat menambahkan, mengedit, dan menghapus list teman</string>

    <string name="home_title">Welcome to Application</string>
    <string name="home_desc">make friends and have fun.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
