<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilFragment" >

    <TextView
        android:id="@+id/tv_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:text="@string/title_profil" />

    <ImageView
        android:id="@+id/image_foto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_profil"
        android:src="@drawable/foto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/tv_nim"
        android:layout_below="@+id/image_foto"
        android:text="@string/nim"
        android:textSize="15dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nim"
        android:layout_centerHorizontal="true"
        android:text="@string/nama" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_nama"
        android:textAlignment="center"
        android:text="@string/kelas"
        android:id="@+id/tv_kelas" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tv_kelas"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/deskripsi"
        android:id="@+id/tv_deskripsi" />

</RelativeLayout>